--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: 4.0.4
-
+  path_drawing: ^0.4.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
