--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   firebase_auth: ^0.15.5
   google_sign_in: ^4.1.4
   email_validator: ^1.0.0
-
+  cloud_firestore: ^0.13.4
 
   
 dev_dependencies:
