--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   google_sign_in: ^4.1.4
   email_validator: ^1.0.0
   cloud_firestore: ^0.13.4
-  pedantic: ^1.8.0  
+  pedantic: ^1.8.0
+  rive: ^0.0.1
 
   
 dev_dependencies:
@@ -48,9 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/rive/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
